# aiogtrans

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py  translate
.github/workflows/: release.yml  test.yml
aiogtrans/: __init__.py  cache.py  client.py  constants.py  exceptions.py  models.py  urls.py
tests/: conftest.py  test_cache.py  test_client.py  test_models.py
